adding porfolio.html and link changes to index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -36,24 +36,25 @@
 
 <body>
 
- <!--Creating a card for ABOUT ME scetion-->   
+ <!--Creating a card for Portfolio pictures-->   
     <section class="aboutMeCard">
-        <div class="col-md-12" style="width: 40rem; margin: 0px; height: 100%;">
+        <div class="col-md-10" style="width: 40rem; margin: 0px; height: 100%;">
             <div class="card-body">
-              <h3 class="card-title text-danger" style="margin-left: 15px;">About Me</h3>
+              <h2 class="card-title text-danger" style="margin-left: 15px;">Portfolio</h2>
               <hr>
-              <!--Profile Image placement-->
-              <img class="col-md-6 float-left" src="images/profile.JPG" alt="Profile Picture" style="margin-bottom: 5px;">
-              <!--About me text-->
-              <p class="card-text col-md-12 text-white">My name is Cody Mullen and I am a software engineer in the making. I have always had an interest in computers and the way they are programmed to perform in the ways of technology today. I consider myself to be a creative person and hope to apply this feature of mine into the world of coding. Outside of my school work and coding, I like to ride my road bike, play video games, and play golf.  Throughout my work experience in life I have learned the value of teamwork and camraderie within your group of coworkers. I hope to switch my career from my current field of law enforcement, to the exciting world of programming and web development. </p>
+              <!--Porfolio Images (placeholders)-->
+              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
             </div>
         </div>
     </section>
-<!--Closed About Me card-->  
+<!--Closed Portfolio card-->  
 
 </body>
 </html>
-
-
 
 
