taking off strong feature of about me text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--Creating the Nav Bar on the top of the page-->
 <section class="navbar">
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-        <a class="navbar-brand bg-danger text-white p-1" href="https://github.com/codymu45">Cody Mullen</a>
+        <a class="navbar-brand bg-danger text-white p-1" href="https://github./codymu45">Cody Mullen</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,7 +45,7 @@
               <!--Profile Image placement-->
               <img class="col-md-6 float-left" src="images/profile.JPG" alt="Profile Picture" style="margin-bottom: 5px;">
               <!--About me text-->
-              <p class="card-text col-md-12 text-white"><strong> name is Cody Mullen and I am a software engineer in the making. I have always had an interest in computers and the way they are programmed to perform in the ways of technology today. I consider myself to be a creative person and hope to apply this feature of mine into the world of coding. Outside of my school work and coding, I like to ride my road bike, play video games, and play golf.  Throughout my work experience in life I have learned the value of teamwork and camraderie within your group of coworkers. I hope to switch my career from my current field of law enforcement, to the exciting world of programming and web development.</strong></p>
+              <p class="card-text col-md-12 text-white">My name is Cody Mullen and I am a software engineer in the making. I have always had an interest in computers and the way they are programmed to perform in the ways of technology today. I consider myself to be a creative person and hope to apply this feature of mine into the world of coding. Outside of my school work and coding, I like to ride my road bike, play video games, and play golf.  Throughout my work experience in life I have learned the value of teamwork and camraderie within your group of coworkers. I hope to switch my career from my current field of law enforcement, to the exciting world of programming and web development.</p>
             </div>
         </div>
     </section>
