fixed pictures folder and link issues

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <!--Creating the Nav Bar on the top of the page-->
 <section class="navbar">
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-        <a class="navbar-brand bg-danger text-white p-1" href="https://github.io/codymu45">Cody Mullen</a>
+        <a class="navbar-brand bg-danger text-white p-1" href="https://github.com/codymu45">Cody Mullen</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,12 +43,12 @@
               <h2 class="card-title text-danger" style="margin-left: 15px;">Portfolio</h2>
               <hr>
               <!--Porfolio Images (placeholders)-->
-              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
-              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
-              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
-              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
-              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
-              <img class="col-md-6 float-left" src="images/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
             </div>
         </div>
     </section>
