--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <!--Creating the Nav Bar on the top of the page-->
 <section class="navbar">
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-        <a class="navbar-brand bg-danger text-white p-1" href="https://github.io/codymu45">Cody Mullen</a>
+        <a class="navbar-brand bg-danger text-white p-1" href="https://github.com/codymu45">Cody Mullen</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
