changed profile picture name

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
               <h3 class="card-title text-danger" style="margin-left: 15px;">About Me</h3>
               <hr>
               <!--Profile Image placement-->
-              <img class="col-md-6 float-left" src="pictures/profile.jpg" alt="Profile Picture" style="margin-bottom: 5px;">
+              <img class="col-md-6 float-left" src="pictures/mainprofile.jpg" alt="Profile Picture" style="margin-bottom: 5px;">
               <!--About me text-->
               <p class="card-text col-md-12 text-white">My name is Cody Mullen and I am a software engineer in the making. I have always had an interest in computers and the way they are programmed to perform in the ways of technology today. I consider myself to be a creative person and hope to apply this feature of mine into the world of coding. Outside of my school work and coding, I like to ride my road bike, play video games, and play golf.  Throughout my work experience in life I have learned the value of teamwork and camraderie within your group of coworkers. I hope to switch my career from my current field of law enforcement, to the exciting world of programming and web development.</p>
             </div>
-        </div>
+        </div> 
     </section>
 <!--Closed About Me card-->  
 
