updated projects and added links to them. small changes to html and styling

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,17 +40,26 @@
 
  <!--Creating a card for Portfolio pictures-->   
     <section class="aboutMeCard">
-        <div class="col-md-10" style="width: 40rem; margin: 0px; height: 100%;">
+        <div class="col-md-12" style="width: 40rem; margin: 0px; height: 100%;">
             <div class="card-body">
               <h2 class="card-title text-danger" style="margin-left: 15px;">Portfolio</h2>
               <hr>
               <!--Porfolio Images (placeholders)-->
-              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
-              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
-              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
-              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
-              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
-              <img class="col-md-6 float-left" src="pictures/350x350.png" alt="picture placeholder" style="margin-bottom: 10px;">
+                <a href="https://codymu45.github.io/passwordgenerator">
+                <img id="passwordthumb" class="col-md-5 float-left" src="pictures/passwordthumbnail.jpg" alt="password generator" style="margin-bottom: 10px;">
+                </a>
+              
+                <a href="https://codymu45.github.io/quiz">
+                <img id="quizthumb" class="col-md-5 float-left" src="pictures/quizthumbnail.jpg" alt="code quiz" style="margin-bottom: 10px;">
+                </a>
+
+                <a href="https://codymu45.github.io/dailyPlanner">
+                <img id="plannerthumb" class="col-md-5 float-left" src="pictures/plannerthumbnail.jpg" alt="daily planner" style="margin-bottom: 10px;">
+                </a>
+
+                <a href="https://codymu45.github.io/weather_app">
+              <img id="weatherthumb" class="col-md-5 float-left" src="pictures/weatherthumbnail.jpg" alt="weather dashboard" style="margin-bottom: 10px;">
+                </a>
             </div>
         </div>
     </section>
