added new projects to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,21 +45,35 @@
               <h2 class="card-title text-danger" style="margin-left: 15px;">Portfolio</h2>
               <hr>
               <!--Porfolio Images (placeholders)-->
+              <div class="thumbnails">         
                 <a href="https://codymu45.github.io/passwordgenerator">
-                <img id="passwordthumb" class="col-md-5 float-left" src="pictures/passwordthumbnail.jpg" alt="password generator" style="margin-bottom: 10px;">
+                  <img id="passwordthumb" class="col-md-5 float-left" src="pictures/passwordthumbnail.jpg" alt="password generator" style="margin-bottom: 10px;">
                 </a>
               
                 <a href="https://codymu45.github.io/quiz">
-                <img id="quizthumb" class="col-md-5 float-left" src="pictures/quizthumbnail.jpg" alt="code quiz" style="margin-bottom: 10px;">
+                  <img id="quizthumb" class="col-md-5 float-left" src="pictures/quizthumbnail.jpg" alt="code quiz" style="margin-bottom: 10px;">
                 </a>
 
                 <a href="https://codymu45.github.io/dailyPlanner">
-                <img id="plannerthumb" class="col-md-5 float-left" src="pictures/plannerthumbnail.jpg" alt="daily planner" style="margin-bottom: 10px;">
+                  <img id="plannerthumb" class="col-md-5 float-left" src="pictures/plannerthumbnail.jpg" alt="daily planner" style="margin-bottom: 10px;">
                 </a>
 
                 <a href="https://codymu45.github.io/weather_app">
-              <img id="weatherthumb" class="col-md-5 float-left" src="pictures/weatherthumbnail.jpg" alt="weather dashboard" style="margin-bottom: 10px;">
+                  <img id="weatherthumb" class="col-md-5 float-left" src="pictures/weatherthumbnail.jpg" alt="weather dashboard" style="margin-bottom: 10px;">
                 </a>
+
+                <a href="https://github.com/codymu45/noteTaker">
+                  <img id="notethumb" class="col-md-5 float-left" src="pictures/notethumbnail.jpg" alt="note taker" style="margin-bottom: 10px;">
+                </a>
+
+                <a href="https://github.com/codymu45/burger">
+                  <img id="burgerthumb" class="col-md-5 float-left" src="pictures/350x350.png" alt="burger" style="margin-bottom: 10px;">
+                </a>
+
+                <a href="https://github.com/codymu45/project2">
+                  <img id="p2thumb" class="col-md-5 float-left" src="pictures/p2thumbnail.jpg" alt="project 2" style="margin-bottom: 10px;">
+                </a>
+              </div>    
             </div>
         </div>
     </section>
